add basic layout

--- a/src/containers/Sidebar/Sidebar.module.css
+++ b/src/containers/Sidebar/Sidebar.module.css
@@ -42,3 +42,9 @@
     background-color: white;
     overflow: scroll;
 }
+
+@media (max-width: 500px) {
+    .Sidebar {
+        display: none;
+    }
+}
