--- a/src/hoc/Layout/Layout.module.css
+++ b/src/hoc/Layout/Layout.module.css
@@ -1,3 +1,25 @@
-.Content {
+/* .Content {
     margin-top: 72px;
+} */
+
+.Layout {
+    flex: 0.65;
+    display: flex;
+    flex-direction: column;
+}
+
+@media (max-width: 500px) {
+    .Layout {
+        flex: 1;
+    }
+}
+
+/* .Chat {
+    background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+} */
+
+.Chat {
+    flex: 0.9;
+    display: flex;
+    flex-direction: column;
 }
