add components and routes

--- a/src/containers/Chat/Chat.module.css
+++ b/src/containers/Chat/Chat.module.css
@@ -14,7 +14,7 @@
     background-repeat: repeat;
     background-position: center;
     padding: 30px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .Messages {
