--- a/src/components/SideDrawer/SideDrawer.module.css
+++ b/src/components/SideDrawer/SideDrawer.module.css
@@ -7,9 +7,13 @@
     top: 0;
     z-index: 300;
     background-color: white;
-    padding: 32px 16px;
+    /* padding: 32px 16px; */
+    padding: 10px;
     box-sizing: border-box;
     transition: transform 0.3s ease-out; 
+    display: flex;
+    flex-direction: column;
+
 }
 
 @media (min-width: 500px){
@@ -24,4 +28,15 @@
 
 .Close {
     transform: translateX(-100%);
+}
+
+.Header {
+    padding: 8px;
+    flex: 0.1;
+    border-bottom: 1px solid lightgray;
+}
+
+.Rooms {
+    flex: 0.9;
+    overflow: scroll;
 }
