add data to localStorage

--- a/src/components/SideDrawer/SideDrawer.module.css
+++ b/src/components/SideDrawer/SideDrawer.module.css
@@ -31,10 +31,23 @@
 }
 
 .Header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     padding: 8px;
     flex: 0.1;
     border-bottom: 1px solid lightgray;
 }
+
+.Header > a {
+    color: rgb(185, 179, 179);
+}
+
+.Header > a:hover {
+    color: #8f5c2c;
+    /* border-bottom: 4px solid #8f5c2c; */
+}
+
 
 .Rooms {
     flex: 0.9;
