--- a/src/containers/Chat/Chat.module.css
+++ b/src/containers/Chat/Chat.module.css
@@ -11,6 +11,7 @@
 .Chat {
     flex: 0.9;
     background-image: url("https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png");
+    /* background-color: #000000; */
     background-repeat: repeat;
     background-position: center;
     padding: 30px;
