--- a/src/containers/Chat/chatExtra.css
+++ b/src/containers/Chat/chatExtra.css
@@ -4,7 +4,8 @@
     padding: 10px;
     border-radius: 10px;
     width: fit-content;
-    background-color: #ffffff;
+    /* background-color: #ffffff; */
+    background-color: #fca311;
     margin-bottom: 30px;
 }
 
